# fast-healthchecks

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  docker-compose.yml  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: 1_test.yml  2_bump.yml  2_rollback.yml  3_docs.yml  3_release.yml  4_codeql.yml  4_pythonpublish.yml  5_codeql.yml  5_dependency_review.yml
SECURITY/: index.html
api/: index.html
changelog/: index.html
configuration/: index.html
contributing/: index.html
decisions/: index.html
decisions/001-check-contract/: index.html
docs/: SECURITY.md  api.md  changelog.md  configuration.md  contributing.md  dsn-formats.md  index.md  installation.md  lifecycle.md  probe-options.md  run-probe.md  ssrf.md  style-guide.md  usage.md
docs/decisions/: 001-check-contract.md  README.md
dsn-formats/: index.html
examples/: __init__.py  probes.py
examples/fastapi_example/: __init__.py  main.py
examples/faststream_example/: __init__.py  main.py
examples/litestar_example/: __init__.py  main.py
fast_healthchecks/: __init__.py  dsn.py  logging.py  models.py  utils.py
fast_healthchecks/checks/: __init__.py  _base.py  _imports.py  configs.py  dsn_parsing.py  function.py  kafka.py  mongo.py  opensearch.py  rabbitmq.py  redis.py  types.py  url.py
fast_healthchecks/checks/postgresql/: asyncpg.py  base.py  psycopg.py
fast_healthchecks/integrations/: base.py  fastapi.py  faststream.py  litestar.py
installation/: index.html
lifecycle/: index.html
probe-options/: index.html
run-probe/: index.html
scripts/: sonar.sh
search/: search_index.json
ssrf/: index.html
style-guide/: index.html
tests/: __init__.py  conftest.py  utils.py
tests/certs/: ca.crt  ca.key  ca.srl  cert.crt  cert.csr  key.key
tests/integration/: __init__.py  conftest.py  test_assertions.py
tests/integration/checks/: __init__.py  conftest.py  httpbin_like_app.py  test_function.py  test_kafka.py  test_mongo.py  test_opensearch.py  test_rabbitmq.py  test_redis.py  test_url.py
tests/integration/checks/postgresql/: __init__.py  conftest.py  test_asyncpg.py  test_psycopg.py
tests/integration/integrations/: __init__.py  test_fastapi.py  test_faststream.py  test_litestar.py
tests/unit/: __init__.py  test_dsn.py  test_imports.py  test_logging.py  test_models.py  test_utils.py
tests/unit/checks/: __init__.py  test__base.py  test__dsn.py  test_dsn_parsing.py  test_function.py  test_kafka.py  test_mongo.py  test_opensearch.py  test_rabbitmq.py  test_redis.py  test_url.py
tests/unit/checks/postgresql/: __init__.py  test_asyncpg.py  test_base.py  test_psycopg.py
tests/unit/integrations/: __init__.py  helpers.py  test_base_lifecycle.py  test_fastapi.py  test_faststream.py  test_litestar.py  test_run_probe.py
usage/: index.html
