[project]
name = "fast-healthchecks"
version = "0.2.4"
description = "FastHealthchecks"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Vladislav Shepilov", email = "shepilov.v@protonmail.com"},
]
maintainers = [
    {name = "Vladislav Shepilov", email = "shepilov.v@protonmail.com"},
]
keywords = [
    "healthcheck", "library",
    "fastapi", "starlette", "faststream", "litestar",
    "asyncpg", "psycopg", "redis", "aio-pika", "httpx", "aiokafka", "motor",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = "<3.15.0,>=3.10.0"
dependencies = []

[tool.setuptools.package-data]
fast_healthchecks = ["py.typed"]

[tool.setuptools.packages]
find = {}

[project.urls]
homepage = "https://github.com/shepilov-vladislav/fast-healthchecks"
documentation = "https://shepilov-vladislav.github.io/fast-healthchecks/"
source = "https://github.com/shepilov-vladislav/fast-healthchecks"
tracker = "https://github.com/shepilov-vladislav/fast-healthchecks/issues"

[project.optional-dependencies]
asyncpg = ["asyncpg>=0.31.0,<1.0.0"]
psycopg = ["psycopg>=3.3.2,<4.0.0"]
redis = ["redis>=7.1.1,<8.0.0"]
aio-pika = ["aio-pika>=9.5.8,<10.0.0"]
httpx = ["httpx>=0.28.1,<1.0.0"]
aiokafka = ["aiokafka>=0.13.0,<1.0.0"]
motor = ["motor>=3.7.1,<4.0.0"]
fastapi = ["fastapi[standard]>=0.129.0,<1.0.0"]
faststream = ["faststream>=0.6.6,<1.0.0"]
litestar = ["litestar>=2.21.0,<3.0.0"]
msgspec = ["msgspec>=0.20.0,<1.0.0"]
opensearch = ["opensearch-py[async]>=3.1.0,<4.0.0"]

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-deadfixtures>=3.1.0",
    "python-dotenv>=1.2.1",
    "pytest-xdist>=3.8.0",
    "greenlet>=3.3.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.1",
    "ty>=0.0.17",
    "deptry>=0.24.0",
]
docs = [
    "mkdocs-include-markdown-plugin>=7.2.1",
    "mkdocs>=1.6.1,<2.0.0",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.3",
    "pymdown-extensions>=10.20.1",
]

[tool.deptry]
experimental_namespace_package = true
pep621_dev_dependency_groups = ["dev", "docs"]

[tool.deptry.per_rule_ignores]
DEP002 = ["msgspec"]
DEP003 = []
DEP004 = ["dotenv"]

[tool.uv]
default-groups = []

[tool.ruff]
line-length = 120
# Assume Python 3.10 to be compatible with typing.
target-version = "py310"
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".ruff_cache",
    ".tox",
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "E501",  # line too long, handled by ruff-format
    "CPY001",  # Missing copyright notice at top of file
    "TC001",  # typing-only imports; many break runtime (asyncio, ssl, Executor, DSN TypedDicts)
    "TC002",
    "TC003",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "D", "N802", "N806", "S", "SLF"]
"examples/**/*.py" = ["D", "S", "SLF"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
minversion = "9.0"
addopts = "-ra -q"
filterwarnings = [
    "error",
    "error:::fast_healthchecks",
    # Litestar still imports pydantic.v1 (upstream); cannot fix until Litestar drops V1.
    "ignore:Core Pydantic V1 functionality isn't compatible with Python 3.14 or greater:UserWarning",
    # Python 3.14+: pytest-asyncio uses event_loop_policy / get_event_loop_policy (upstream).
    "ignore:'asyncio.get_event_loop_policy' is deprecated:DeprecationWarning",
    "ignore:'asyncio.DefaultEventLoopPolicy' is deprecated:DeprecationWarning",
    "ignore:'asyncio.WindowsSelectorEventLoopPolicy' is deprecated:DeprecationWarning",
    # aiohttp.connector (e.g. opensearch-py async transport) emits deprecation on 3.14+ (upstream).
    "ignore::DeprecationWarning:aiohttp.connector",
]
markers = """
    imports: mark a test as an imports test
    integration: mark a test as an integration test
    unit: mark a test as a unit test
"""

[tool.coverage.run]
source = ["fast_healthchecks"]

[tool.coverage.report]
precision = 1
include = ["fast_healthchecks/*"]
omit = [
    "tests/*",
]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't check obviously not implemented
    "raise NotImplementedError",
    # We don't really care what happens if fail
    "except ImportError:",
    # Don't check for typing-only code
    "if TYPE_CHECKING:",
    # Don't check for code that only runs itself
    "if __name__ == .__main__.:",
]
show_missing = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = false
version_files = [
    "pyproject.toml:version",
    "fast_healthchecks/__init__.py:__version__",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
